infra/k8s/appointment-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: appointment-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: appointment-service

  template:
    metadata:
      labels:
        app: appointment-service

    spec:
      containers:
        - name: appointment-service
          image: deci4-s-415864-hospital-core-appointment-service:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 5001
