infra/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hospital-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: hospital-backend

  template:
    metadata:
      labels:
        app: hospital-backend

    spec:
      containers:
        - name: backend
          image: deci4-s-415864-hospital-core-backend:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 5000
          
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
