infra/k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hospital-backend

spec:
  selector:
    app: hospital-backend

  ports:
    - port: 5000
      targetPort: 5000

  type: NodePort
