infra/k8s/hospital-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hospital-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - hospital.local
      secretName: hospital-tls

  rules:
    - host: hospital.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hospital-frontend
                port:
                  number: 3000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hospital-backend
                port:
                  number: 5000
